--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section id="gallery" class="block">
       <div class="block__head">
         <h2>Галерея</h2>
-        <p class="muted">Здесь можно вставить свои фотографии путешествий.</p>
+        <p class="muted"></p>
       </div>
 
       <div class="gallery">
